# BTH

./: .gitignore  README.md
.github/workflows/: PA1417_backend  PA1417_backend.yml
DV1457/: first.sh
DV1457/lab1/: first.sh  js.js
DV1457/lab2/: Makefile  asd  asd.d  asd.drt  clientProgram  kmeans-data.txt  kmeans-results.txt  server
DV1538/: 2022-03-29.md
DV1538/algoritms/: CountingSort.nnb  RadixSort.nnb
DV1538/b/: BST.h  CMakeLists.txt  main.cpp  test_file_of_bst_used_in_codegrade.cpp
DV1538/project/: CMakeLists.txt  Graph.h  GraphTest.cpp  Test_pair_and_vector.cpp  graph01.txt  graph02.txt  graph03.txt  graph05.txt  graph06.txt  graph09.txt  main.cpp
DV1538/seminarium/: 1.md  1.nnb  3.md  3.nnb
DV1613/lab1/: lab1-3.s
DV1613/lab2/: file.s  max.s  polling-example.s  timers_example.s
DV1613/lab3/: files.s
DV1627/assignments/1/src/cpp/: CMakeLists.txt  CMakeSettings.json  assembler.cpp  assembler.hpp  main.cpp  mod.asm  mul.asm
DV1627/assignments/1/src/cpp/test/: catch.hpp  test-main.cpp  test.asm
DV1627/assignments/2/: CMakeLists.txt  README.md  main.cpp
DV1627/assignments/2/include/: ConnectN.hpp  Visualizer.hpp
DV1627/assignments/2/src/: ConnectN.cpp  Visualizer.cpp
DV1627/assignments/2/test/: test-main.cpp
DV1627/assignments/3/: CMakeLists.txt  README.md  Vector.hpp  main.cpp
DV1627/assignments/3/test/: test-main.cpp
DV1627/project/: CMakeLists.txt  README.md  main.cpp
DV1627/project/include/: Game.hpp  GameEntity.hpp  SnakeBody.hpp  SnakeHead.hpp
DV1627/project/src/: Game.cpp  GameEntity.cpp  SnakeBody.cpp  SnakeHead.cpp
DV1627/workshops/2/: CMakeLists.txt
DV1627/workshops/2/includes/: Protocol.hpp  ResultColumn.hpp
DV1627/workshops/2/src/: Protocol.cpp  ResultColumn.cpp  main.cpp
DV1627/workshops/2/test/: TestProtocol.cpp  TestResultColumn.cpp
DV1629- OS/lab1_code_students_v1.3/: msgqrecv.c  prof.c
DV1629- OS/lab2_code_students/: aasdads.cpp  fifo  fifo.c  fifo_max  fifo_max.c  hugePenis.c  kukenisbig copy 2.c  kukenisbig.c  lru  optimal  optimal.c  test1
DV1629/lab1_code_students_v1.3/: #include <stdio.c  bankaccount.c  fork  matmulseq  matmulseq.c  matmulseqklar  matmult  matmult.c  msgqrecv.c  msgqsend.c  oldshmem.c  prof  prof.c  prof2  prof2klar.c  profc.cpp  shmem  shmem.c  task_15  task_15.c
DV1629/lab2_code_students/: aasdads.cpp  fifo  fifo.c  fifo_max.c  frame.c  frame.h  hugePenis  hugePenis.c  kukenisbig  lru  lru.c  main.cpp  mult.mem  optimal.c  test.c  test.s  test.sh  test2
DV1629/lab3_code_students_v1.3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  disk.cpp  disk.h  filesystem  fs.cpp  fs.h  input1.txt  input2.txt  input3.txt  main.cpp  shell.cpp  shell.h  test.cpp  test1  test2  test3  test4  test5  test_commands.txt  test_script1.cpp  test_script2.cpp  test_script3.cpp  test_script4.cpp  test_script5.cpp  todo
DV1629/lab3_code_students_v1.3/.cache/jb/: compilation_graph.txt  index_stats.txt  modules_graph.txt
DV1629/lab3_code_students_v1.3/.cache/jb/cache/: modules.idx
DV1629/lab3_code_students_v1.3/.cache/jb/symbols/: home_lajna__cache_JetBrains_Fleet_language_server_jbclangd_include_stddef.h.riff  opt_code_BTH_DV1629_lab3_code_students_v1_3_build_CMakeFiles_3_25_1_CompilerIdCXX_CMakeCXXCompilerId.cpp.riff  opt_code_BTH_DV1629_lab3_code_students_v1_3_disk.cpp.riff  opt_code_BTH_DV1629_lab3_code_students_v1_3_disk.h.riff  opt_code_BTH_DV1629_lab3_code_students_v1_3_fs.cpp.riff  opt_code_BTH_DV1629_lab3_code_students_v1_3_fs.h.riff  opt_code_BTH_DV1629_lab3_code_students_v1_3_main.cpp.riff  opt_code_BTH_DV1629_lab3_code_students_v1_3_shell.cpp.riff  opt_code_BTH_DV1629_lab3_code_students_v1_3_shell.h.riff  opt_code_BTH_DV1629_lab3_code_students_v1_3_test_script.h.riff  opt_code_BTH_DV1629_lab3_code_students_v1_3_test_script1.cpp.riff  opt_code_BTH_DV1629_lab3_code_students_v1_3_test_script2.cpp.riff  opt_code_BTH_DV1629_lab3_code_students_v1_3_test_script3.cpp.riff  opt_code_BTH_DV1629_lab3_code_students_v1_3_test_script4.cpp.riff  opt_code_BTH_DV1629_lab3_code_students_v1_3_test_script5.cpp.riff  usr_include_fcntl.h.riff  usr_include_features.h.riff  usr_include_linux_close_range.h.riff  usr_include_linux_falloc.h.riff  usr_include_unistd.h.riff  usr_include_x86_64-linux-gnu_bits_confname.h.riff  usr_include_x86_64-linux-gnu_bits_environments.h.riff  usr_include_x86_64-linux-gnu_bits_fcntl-linux.h.riff  usr_include_x86_64-linux-gnu_bits_fcntl.h.riff  usr_include_x86_64-linux-gnu_bits_getopt_core.h.riff  usr_include_x86_64-linux-gnu_bits_getopt_posix.h.riff  usr_include_x86_64-linux-gnu_bits_posix_opt.h.riff  usr_include_x86_64-linux-gnu_bits_stat.h.riff  usr_include_x86_64-linux-gnu_bits_struct_stat.h.riff  usr_include_x86_64-linux-gnu_bits_types_struct_iovec.h.riff  usr_include_x86_64-linux-gnu_bits_unistd_ext.h.riff  usr_include_x86_64-linux-gnu_sys_types.h.riff
DV1629/lab3_code_students_v1.3/.fleet/: run.json
DV1656/assignment1/: Makefile  Node.h  ast.h  compiler  global.h  lex.yy.c  lexer.flex  lexer.flex.new  lexer.flex.old  main.cc  parser.tab.cc  parser.tab.hh  parser.yy  parser_traditional_approach.yy  results.csv  test.sh  tree.dot
DV1656/assignment2/: CMakeCache.txt  CMakeLists.txt  Makefile  Node.h  StringUtils.h  SymbolTable.c  SymbolTable.h  Viz.h  cmake_clean.cmake  cmake_install.cmake  compiler  generateSymbolTree.c  lex.yy.c  lexer.flex  main.cc  parser.tab.hh  parser.yy  symbol_table.cpp  symbol_table.dot  tree.dot
DV1656/assignment3/: BBlock.h  CMakeCache.txt  Makefile  Node.h  SymbolTable.h  Tac.h  TempGen.h  Viz.h  cmake_clean.cmake  cmake_install.cmake  generateIR.c  generateSymbolTree.c  lex.yy.h  lexer.flex  lexer.flex.new  (+7 more)
ET1524/: 2020-03-31.md  2022-04-12.md  2022-05-03.md
PA1460/: .gitmodules  componentDiagram.md
pausKod/: README.md  bun.lockb  index.ts  package.json
(+205 files in other folders)
